@@ -94,7 +94,7 @@ export USE_KLIPS USE_NETKEY USE_VENDORID
 export USE_AGGRESSIVE USE_XAUTH USE_XAUTHPAM
 export USE_NAT_TRAVERSAL USE_NAT_TRAVERSAL_TRANSPORT_MODE USE_LDAP
 export USE_LIBCURL
-export USE_WEAKSTUFF USE_NOCRYPTO USE_EXTRACRYPTO
+export USE_EXTRACRYPTO
 export USE_TAPROOM USE_OBJDIR
 export HAVE_STATSD USE_DYNAMICDNS USE_DNSSEC USE_LINUX_AUDIT
 export USE_IPSEC_CONNECTION_LIMIT IPSEC_CONNECTION_LIMIT
