@@ -61,7 +61,7 @@
 	"5E2327CF EF98C582 664B4C0F 6CC41659"
 #endif
 
-#if defined(USE_VERYWEAK_DH1)
+#if 0 /* too weak - left only as reference */
 # define MODP768_MODULUS \
     "FFFFFFFF FFFFFFFF C90FDAA2 2168C234 C4C6628B 80DC1CD1 " \
     "29024E08 8A67CC74 020BBEA6 3B139B22 514A0879 8E3404DD " \
