@@ -51,8 +51,6 @@ XAUTH_HAVE_PAM=1
 endif
 endif
 
-# -O on Linux makes gcc coredump when compiling sha1.c
-# -Wundef is nice but RHL5.2 compiler doesn't support it
 CFLAGS +=-g ${WERROR}
 
 ifeq ($(HAVE_OCF),true)
@@ -238,13 +236,6 @@ CURL_DEFS=-DLIBCURL
 CURL_LLIBS=-lcurl
 endif
 
-ifeq ($(USE_WEAKSTUFF),true)
-WEAK_DEFS=-DUSE_VERYWEAK_DH1=1
-ifeq ($(USE_NOCRYPTO),true)
-WEAK_DEFS+=-DUSE_1DES
-endif
-endif
-
 ifeq ($(USE_EXTRACRYPTO),true)
 EXTRA_CRYPTO_DEFS=-DUSE_TWOFISH -DUSE_BLOWFISH -DUSE_SERPENT 
 EXTRA_CRYPTO_SRCS=ike_alg_blowfish.c ike_alg_twofish.c ike_alg_serpent.c 
@@ -286,7 +277,6 @@ DEFINES = $(EXTRA_DEFINES) \
 	${LABELED_IPSEC_DEFS} \
 	${XAUTH_DEFS} ${XAUTHPAM_DEFS} \
 	${NAT_DEFS} ${CURL_DEFS}\
-	${WEAK_DEFS} \
 	${SINGLE_CONF_DIR} \
 	${HAVE_STATSD_DEFS} \
 	${IPSEC_CONNECTION_LIMIT_DEFS} \
