@@ -1,11 +1,9 @@
 ## 
 ## IKE algorithms config. for static linking into pluto
-## By now  3DES,MD5 and SHA1 are already present in pluto.
+## By now  AES, 3DES,MD5 and SHA1/SHA2 are already present in pluto.
 ## 
 ## 1DES is disabled, enable at-your-own-risk
 ##
-CONFIG_IKE_ALG_AES=y
 CONFIG_IKE_ALG_BLOWFISH=y
 CONFIG_IKE_ALG_TWOFISH=y
 CONFIG_IKE_ALG_SERPENT=y
-CONFIG_IKE_ALG_SHA2=y
