@@ -36,8 +36,6 @@ USE_NAT_TRAVERSAL=true
 USE_NAT_TRAVERSAL_TRANSPORT_MODE=true
 USE_LDAP=true
 USE_LIBCURL=true
-USE_WEAKSTUFF=true
-USE_NOCRYPTO=true
 USE_EXTRACRYPTO=true
 USE_IPSEC_CONNECTION_LIMIT=true
 HAVE_STATSD=true
@@ -53,6 +51,6 @@ USE_LEAK_DETECTIVE=true
 export USE_NETKEY USE_VENDORID USE_AGGRESSIVE USE_XAUTH USE_XAUTHPAM \
        USE_FIPSCHECK USE_LINUX_AUDIT USE_LABELED_IPSEC USE_LIBCAP_NG \
        USE_NM USE_MODP_RFC5114 USE_NAT_TRAVERSAL \
-       USE_NAT_TRAVERSAL_TRANSPORT_MODE USE_LDAP USE_LIBCURL USE_WEAKSTUFF \
-       USE_NOCRYPTO USE_EXTRACRYPTO USE_IPSEC_CONNECTION_LIMIT HAVE_STATSD \
+       USE_NAT_TRAVERSAL_TRANSPORT_MODE USE_LDAP USE_LIBCURL \
+       USE_EXTRACRYPTO USE_IPSEC_CONNECTION_LIMIT HAVE_STATSD \
        HAVE_OCF USE_TAPROOM USE_LEAK_DETECTIVE USE_DMALLOC USE_LEAK_DETECTIVE 
