@@ -36,8 +36,6 @@ USE_NAT_TRAVERSAL=false
 USE_NAT_TRAVERSAL_TRANSPORT_MODE=false
 USE_LDAP=false
 USE_LIBCURL=false
-USE_WEAKSTUFF=false
-USE_NOCRYPTO=false
 USE_EXTRACRYPTO=false
 USE_IPSEC_CONNECTION_LIMIT=false
 HAVE_STATSD=false
@@ -51,6 +49,6 @@ USE_LEAK_DETECTIVE=false
 export USE_NETKEY USE_VENDORID USE_AGGRESSIVE USE_XAUTH USE_XAUTHPAM \
        USE_FIPSCHECK USE_LINUX_AUDIT USE_LABELED_IPSEC USE_LIBCAP_NG \
        USE_NM USE_MODP_RFC5114 USE_NAT_TRAVERSAL \
-       USE_NAT_TRAVERSAL_TRANSPORT_MODE USE_LDAP USE_LIBCURL USE_WEAKSTUFF \
-       USE_NOCRYPTO USE_EXTRACRYPTO USE_IPSEC_CONNECTION_LIMIT HAVE_STATSD \
+       USE_NAT_TRAVERSAL_TRANSPORT_MODE USE_LDAP USE_LIBCURL \
+       USE_EXTRACRYPTO USE_IPSEC_CONNECTION_LIMIT HAVE_STATSD \
        HAVE_OCF USE_TAPROOM USE_LEAK_DETECTIVE USE_DMALLOC USE_LEAK_DETECTIVE 
